HMP-397: prevents horizontal scrollbars

--- a/extras/common/app/assets/stylesheets/shared.scss
+++ b/extras/common/app/assets/stylesheets/shared.scss
@@ -284,6 +284,7 @@ main:focus-visible {
 .site-footer ul {
   list-style: none;
   margin-bottom: 0px;
+  margin-left: -10px;
   padding-left: 0px;
 }
 .slideshow-modal {
